// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#fetchSQLInstances encrypted should collect data 1`] = `
Object {
  "collectedEntities": Array [
    Object {
      "_class": Array [
        "Vault",
      ],
      "_key": "projects/j1-gc-integration-dev-v3/locations/global/keyRings/example-topic-keyring",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "createTime": "2021-05-31T16:25:43.324630550Z",
            "name": "projects/j1-gc-integration-dev-v3/locations/global/keyRings/example-topic-keyring",
          },
        },
      ],
      "_type": "google_kms_key_ring",
      "createdOn": 1622478343324,
      "displayName": "projects/j1-gc-integration-dev-v3/locations/global/keyRings/example-topic-keyring",
      "location": "global",
      "name": "projects/j1-gc-integration-dev-v3/locations/global/keyRings/example-topic-keyring",
      "projectId": "j1-gc-integration-dev-v3",
      "shortName": "example-topic-keyring",
      "webLink": "https://console.cloud.google.com/security/kms/keyring/manage/global/example-topic-keyring/key?project=j1-gc-integration-dev-v3",
    },
    Object {
      "_class": Array [
        "Vault",
      ],
      "_key": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/example-keyring",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "createTime": "2021-05-31T16:25:42.998855757Z",
            "name": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/example-keyring",
          },
        },
      ],
      "_type": "google_kms_key_ring",
      "createdOn": 1622478342998,
      "displayName": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/example-keyring",
      "location": "us",
      "name": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/example-keyring",
      "projectId": "j1-gc-integration-dev-v3",
      "shortName": "example-keyring",
      "webLink": "https://console.cloud.google.com/security/kms/keyring/manage/us/example-keyring/key?project=j1-gc-integration-dev-v3",
    },
    Object {
      "_class": Array [
        "Vault",
      ],
      "_key": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-bucket-ring",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "createTime": "2021-05-31T16:25:43.452796640Z",
            "name": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-bucket-ring",
          },
        },
      ],
      "_type": "google_kms_key_ring",
      "createdOn": 1622478343452,
      "displayName": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-bucket-ring",
      "location": "us",
      "name": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-bucket-ring",
      "projectId": "j1-gc-integration-dev-v3",
      "shortName": "j1-gc-integration-dev-v3-bucket-ring",
      "webLink": "https://console.cloud.google.com/security/kms/keyring/manage/us/j1-gc-integration-dev-v3-bucket-ring/key?project=j1-gc-integration-dev-v3",
    },
    Object {
      "_class": Array [
        "Vault",
      ],
      "_key": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-disk-bucket-ring",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "createTime": "2021-05-31T16:25:42.750605992Z",
            "name": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-disk-bucket-ring",
          },
        },
      ],
      "_type": "google_kms_key_ring",
      "createdOn": 1622478342750,
      "displayName": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-disk-bucket-ring",
      "location": "us",
      "name": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-disk-bucket-ring",
      "projectId": "j1-gc-integration-dev-v3",
      "shortName": "j1-gc-integration-dev-v3-disk-bucket-ring",
      "webLink": "https://console.cloud.google.com/security/kms/keyring/manage/us/j1-gc-integration-dev-v3-disk-bucket-ring/key?project=j1-gc-integration-dev-v3",
    },
    Object {
      "_class": Array [
        "Vault",
      ],
      "_key": "projects/j1-gc-integration-dev-v3/locations/us-central1/keyRings/j1-gc-integration-dev-v3-encrypted-sql-instance-ring",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "createTime": "2021-05-31T16:25:42.389137569Z",
            "name": "projects/j1-gc-integration-dev-v3/locations/us-central1/keyRings/j1-gc-integration-dev-v3-encrypted-sql-instance-ring",
          },
        },
      ],
      "_type": "google_kms_key_ring",
      "createdOn": 1622478342389,
      "displayName": "projects/j1-gc-integration-dev-v3/locations/us-central1/keyRings/j1-gc-integration-dev-v3-encrypted-sql-instance-ring",
      "location": "us-central1",
      "name": "projects/j1-gc-integration-dev-v3/locations/us-central1/keyRings/j1-gc-integration-dev-v3-encrypted-sql-instance-ring",
      "projectId": "j1-gc-integration-dev-v3",
      "shortName": "j1-gc-integration-dev-v3-encrypted-sql-instance-ring",
      "webLink": "https://console.cloud.google.com/security/kms/keyring/manage/us-central1/j1-gc-integration-dev-v3-encrypted-sql-instance-ring/key?project=j1-gc-integration-dev-v3",
    },
    Object {
      "_class": Array [
        "Key",
        "CryptoKey",
      ],
      "_key": "projects/j1-gc-integration-dev-v3/locations/global/keyRings/example-topic-keyring/cryptoKeys/example-key",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "createTime": "2021-05-31T16:25:54.427526595Z",
            "destroyScheduledDuration": "86400s",
            "name": "projects/j1-gc-integration-dev-v3/locations/global/keyRings/example-topic-keyring/cryptoKeys/example-key",
            "primary": Object {
              "algorithm": "GOOGLE_SYMMETRIC_ENCRYPTION",
              "createTime": "2021-05-31T16:25:54.427526595Z",
              "generateTime": "2021-05-31T16:25:54.427526595Z",
              "name": "projects/j1-gc-integration-dev-v3/locations/global/keyRings/example-topic-keyring/cryptoKeys/example-key/cryptoKeyVersions/1",
              "protectionLevel": "SOFTWARE",
              "state": "ENABLED",
            },
            "purpose": "ENCRYPT_DECRYPT",
            "versionTemplate": Object {
              "algorithm": "GOOGLE_SYMMETRIC_ENCRYPTION",
              "protectionLevel": "SOFTWARE",
            },
          },
        },
      ],
      "_type": "google_kms_crypto_key",
      "algorithm": "GOOGLE_SYMMETRIC_ENCRYPTION",
      "createdOn": 1622478354427,
      "displayName": "projects/j1-gc-integration-dev-v3/locations/global/keyRings/example-topic-keyring/cryptoKeys/example-key",
      "keyUsage": "ENCRYPT_DECRYPT",
      "name": "projects/j1-gc-integration-dev-v3/locations/global/keyRings/example-topic-keyring/cryptoKeys/example-key",
      "nextRotationTime": undefined,
      "primaryAlgorithm": "GOOGLE_SYMMETRIC_ENCRYPTION",
      "primaryCreateTime": 1622478354427,
      "primaryGenerateTime": 1622478354427,
      "primaryName": "projects/j1-gc-integration-dev-v3/locations/global/keyRings/example-topic-keyring/cryptoKeys/example-key/cryptoKeyVersions/1",
      "primaryProtectionLevel": "SOFTWARE",
      "primaryState": "ENABLED",
      "protectionLevel": "SOFTWARE",
      "public": false,
      "purpose": "ENCRYPT_DECRYPT",
      "rotationPeriod": undefined,
      "webLink": "https://console.cloud.google.com/security/kms/key/manage/global/example-topic-keyring/projects/j1-gc-integration-dev-v3/locations/global/keyRings/example-topic-keyring/cryptoKeys/example-key?project=j1-gc-integration-dev-v3",
    },
    Object {
      "_class": Array [
        "Key",
        "CryptoKey",
      ],
      "_key": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/example-keyring/cryptoKeys/cmek_bigquery_crypto_key",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "createTime": "2021-05-31T16:25:53.130589171Z",
            "destroyScheduledDuration": "86400s",
            "name": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/example-keyring/cryptoKeys/cmek_bigquery_crypto_key",
            "primary": Object {
              "algorithm": "GOOGLE_SYMMETRIC_ENCRYPTION",
              "createTime": "2021-05-31T16:25:53.130589171Z",
              "generateTime": "2021-05-31T16:25:53.130589171Z",
              "name": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/example-keyring/cryptoKeys/cmek_bigquery_crypto_key/cryptoKeyVersions/1",
              "protectionLevel": "SOFTWARE",
              "state": "ENABLED",
            },
            "purpose": "ENCRYPT_DECRYPT",
            "versionTemplate": Object {
              "algorithm": "GOOGLE_SYMMETRIC_ENCRYPTION",
              "protectionLevel": "SOFTWARE",
            },
          },
        },
      ],
      "_type": "google_kms_crypto_key",
      "algorithm": "GOOGLE_SYMMETRIC_ENCRYPTION",
      "createdOn": 1622478353130,
      "displayName": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/example-keyring/cryptoKeys/cmek_bigquery_crypto_key",
      "keyUsage": "ENCRYPT_DECRYPT",
      "name": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/example-keyring/cryptoKeys/cmek_bigquery_crypto_key",
      "nextRotationTime": undefined,
      "primaryAlgorithm": "GOOGLE_SYMMETRIC_ENCRYPTION",
      "primaryCreateTime": 1622478353130,
      "primaryGenerateTime": 1622478353130,
      "primaryName": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/example-keyring/cryptoKeys/cmek_bigquery_crypto_key/cryptoKeyVersions/1",
      "primaryProtectionLevel": "SOFTWARE",
      "primaryState": "ENABLED",
      "protectionLevel": "SOFTWARE",
      "public": false,
      "purpose": "ENCRYPT_DECRYPT",
      "rotationPeriod": undefined,
      "webLink": "https://console.cloud.google.com/security/kms/key/manage/us/example-keyring/projects/j1-gc-integration-dev-v3/locations/us/keyRings/example-keyring/cryptoKeys/cmek_bigquery_crypto_key?project=j1-gc-integration-dev-v3",
    },
    Object {
      "_class": Array [
        "Key",
        "CryptoKey",
      ],
      "_key": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-bucket-ring/cryptoKeys/j1-gc-integration-dev-v3-bucket-key",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "createTime": "2021-05-31T16:25:54.506981906Z",
            "destroyScheduledDuration": "86400s",
            "name": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-bucket-ring/cryptoKeys/j1-gc-integration-dev-v3-bucket-key",
            "nextRotationTime": "2021-08-25T16:27:29.066804Z",
            "primary": Object {
              "algorithm": "GOOGLE_SYMMETRIC_ENCRYPTION",
              "createTime": "2021-08-24T16:27:28.066804156Z",
              "generateTime": "2021-08-24T16:27:28.066804156Z",
              "name": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-bucket-ring/cryptoKeys/j1-gc-integration-dev-v3-bucket-key/cryptoKeyVersions/86",
              "protectionLevel": "SOFTWARE",
              "state": "ENABLED",
            },
            "purpose": "ENCRYPT_DECRYPT",
            "rotationPeriod": "86401s",
            "versionTemplate": Object {
              "algorithm": "GOOGLE_SYMMETRIC_ENCRYPTION",
              "protectionLevel": "SOFTWARE",
            },
          },
        },
      ],
      "_type": "google_kms_crypto_key",
      "algorithm": "GOOGLE_SYMMETRIC_ENCRYPTION",
      "createdOn": 1622478354506,
      "displayName": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-bucket-ring/cryptoKeys/j1-gc-integration-dev-v3-bucket-key",
      "keyUsage": "ENCRYPT_DECRYPT",
      "name": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-bucket-ring/cryptoKeys/j1-gc-integration-dev-v3-bucket-key",
      "nextRotationTime": 1629908849066,
      "primaryAlgorithm": "GOOGLE_SYMMETRIC_ENCRYPTION",
      "primaryCreateTime": 1629822448066,
      "primaryGenerateTime": 1629822448066,
      "primaryName": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-bucket-ring/cryptoKeys/j1-gc-integration-dev-v3-bucket-key/cryptoKeyVersions/86",
      "primaryProtectionLevel": "SOFTWARE",
      "primaryState": "ENABLED",
      "protectionLevel": "SOFTWARE",
      "public": false,
      "purpose": "ENCRYPT_DECRYPT",
      "rotationPeriod": 86401,
      "webLink": "https://console.cloud.google.com/security/kms/key/manage/us/j1-gc-integration-dev-v3-bucket-ring/projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-bucket-ring/cryptoKeys/j1-gc-integration-dev-v3-bucket-key?project=j1-gc-integration-dev-v3",
    },
    Object {
      "_class": Array [
        "Key",
        "CryptoKey",
      ],
      "_key": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-disk-bucket-ring/cryptoKeys/j1-gc-integration-dev-v3-disk-bucket-key",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "createTime": "2021-05-31T16:25:52.740906673Z",
            "destroyScheduledDuration": "86400s",
            "name": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-disk-bucket-ring/cryptoKeys/j1-gc-integration-dev-v3-disk-bucket-key",
            "nextRotationTime": "2021-08-25T16:27:27.325348Z",
            "primary": Object {
              "algorithm": "GOOGLE_SYMMETRIC_ENCRYPTION",
              "createTime": "2021-08-24T16:27:26.325348853Z",
              "generateTime": "2021-08-24T16:27:26.325348853Z",
              "name": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-disk-bucket-ring/cryptoKeys/j1-gc-integration-dev-v3-disk-bucket-key/cryptoKeyVersions/86",
              "protectionLevel": "SOFTWARE",
              "state": "ENABLED",
            },
            "purpose": "ENCRYPT_DECRYPT",
            "rotationPeriod": "86401s",
            "versionTemplate": Object {
              "algorithm": "GOOGLE_SYMMETRIC_ENCRYPTION",
              "protectionLevel": "SOFTWARE",
            },
          },
        },
      ],
      "_type": "google_kms_crypto_key",
      "algorithm": "GOOGLE_SYMMETRIC_ENCRYPTION",
      "createdOn": 1622478352740,
      "displayName": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-disk-bucket-ring/cryptoKeys/j1-gc-integration-dev-v3-disk-bucket-key",
      "keyUsage": "ENCRYPT_DECRYPT",
      "name": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-disk-bucket-ring/cryptoKeys/j1-gc-integration-dev-v3-disk-bucket-key",
      "nextRotationTime": 1629908847325,
      "primaryAlgorithm": "GOOGLE_SYMMETRIC_ENCRYPTION",
      "primaryCreateTime": 1629822446325,
      "primaryGenerateTime": 1629822446325,
      "primaryName": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-disk-bucket-ring/cryptoKeys/j1-gc-integration-dev-v3-disk-bucket-key/cryptoKeyVersions/86",
      "primaryProtectionLevel": "SOFTWARE",
      "primaryState": "ENABLED",
      "protectionLevel": "SOFTWARE",
      "public": false,
      "purpose": "ENCRYPT_DECRYPT",
      "rotationPeriod": 86401,
      "webLink": "https://console.cloud.google.com/security/kms/key/manage/us/j1-gc-integration-dev-v3-disk-bucket-ring/projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-disk-bucket-ring/cryptoKeys/j1-gc-integration-dev-v3-disk-bucket-key?project=j1-gc-integration-dev-v3",
    },
    Object {
      "_class": Array [
        "Key",
        "CryptoKey",
      ],
      "_key": "projects/j1-gc-integration-dev-v3/locations/us-central1/keyRings/j1-gc-integration-dev-v3-encrypted-sql-instance-ring/cryptoKeys/j1-gc-integration-dev-v3-encrypted-sql-instance-key",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "createTime": "2021-05-31T16:25:43.794005568Z",
            "destroyScheduledDuration": "86400s",
            "name": "projects/j1-gc-integration-dev-v3/locations/us-central1/keyRings/j1-gc-integration-dev-v3-encrypted-sql-instance-ring/cryptoKeys/j1-gc-integration-dev-v3-encrypted-sql-instance-key",
            "nextRotationTime": "2021-08-25T16:27:18.338245Z",
            "primary": Object {
              "algorithm": "GOOGLE_SYMMETRIC_ENCRYPTION",
              "createTime": "2021-08-24T16:27:17.338245171Z",
              "generateTime": "2021-08-24T16:27:17.338245171Z",
              "name": "projects/j1-gc-integration-dev-v3/locations/us-central1/keyRings/j1-gc-integration-dev-v3-encrypted-sql-instance-ring/cryptoKeys/j1-gc-integration-dev-v3-encrypted-sql-instance-key/cryptoKeyVersions/86",
              "protectionLevel": "SOFTWARE",
              "state": "ENABLED",
            },
            "purpose": "ENCRYPT_DECRYPT",
            "rotationPeriod": "86401s",
            "versionTemplate": Object {
              "algorithm": "GOOGLE_SYMMETRIC_ENCRYPTION",
              "protectionLevel": "SOFTWARE",
            },
          },
        },
      ],
      "_type": "google_kms_crypto_key",
      "algorithm": "GOOGLE_SYMMETRIC_ENCRYPTION",
      "createdOn": 1622478343794,
      "displayName": "projects/j1-gc-integration-dev-v3/locations/us-central1/keyRings/j1-gc-integration-dev-v3-encrypted-sql-instance-ring/cryptoKeys/j1-gc-integration-dev-v3-encrypted-sql-instance-key",
      "keyUsage": "ENCRYPT_DECRYPT",
      "name": "projects/j1-gc-integration-dev-v3/locations/us-central1/keyRings/j1-gc-integration-dev-v3-encrypted-sql-instance-ring/cryptoKeys/j1-gc-integration-dev-v3-encrypted-sql-instance-key",
      "nextRotationTime": 1629908838338,
      "primaryAlgorithm": "GOOGLE_SYMMETRIC_ENCRYPTION",
      "primaryCreateTime": 1629822437338,
      "primaryGenerateTime": 1629822437338,
      "primaryName": "projects/j1-gc-integration-dev-v3/locations/us-central1/keyRings/j1-gc-integration-dev-v3-encrypted-sql-instance-ring/cryptoKeys/j1-gc-integration-dev-v3-encrypted-sql-instance-key/cryptoKeyVersions/86",
      "primaryProtectionLevel": "SOFTWARE",
      "primaryState": "ENABLED",
      "protectionLevel": "SOFTWARE",
      "public": false,
      "purpose": "ENCRYPT_DECRYPT",
      "rotationPeriod": 86401,
      "webLink": "https://console.cloud.google.com/security/kms/key/manage/us-central1/j1-gc-integration-dev-v3-encrypted-sql-instance-ring/projects/j1-gc-integration-dev-v3/locations/us-central1/keyRings/j1-gc-integration-dev-v3-encrypted-sql-instance-ring/cryptoKeys/j1-gc-integration-dev-v3-encrypted-sql-instance-key?project=j1-gc-integration-dev-v3",
    },
    Object {
      "_class": Array [
        "Account",
      ],
      "_key": "projects/167984947943",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "createTime": "2021-05-31T15:15:56.125Z",
            "displayName": "j1-gc-integration-dev-v3",
            "etag": "CzUfI2XTWvMJgVGlic9LWA==",
            "name": "projects/167984947943",
            "parent": "folders/306329820365",
            "projectId": "j1-gc-integration-dev-v3",
            "state": "ACTIVE",
            "updateTime": "2021-05-31T15:15:58.148Z",
          },
        },
      ],
      "_type": "google_cloud_project",
      "createdOn": 1622474156125,
      "displayName": "j1-gc-integration-dev-v3",
      "id": "j1-gc-integration-dev-v3",
      "lifecycleState": "ACTIVE",
      "name": "projects/167984947943",
      "parent": "folders/306329820365",
      "projectId": "j1-gc-integration-dev-v3",
      "updatedOn": 1622474158148,
      "webLink": "https://console.cloud.google.com/home/dashboard?project=j1-gc-integration-dev-v3",
    },
    Object {
      "_class": Array [
        "Database",
      ],
      "_key": "https://www.googleapis.com/sql/v1beta4/projects/j1-gc-integration-dev-v3/instances/test-mysql",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "backendType": "SECOND_GEN",
            "connectionName": "j1-gc-integration-dev-v3:us-central1:test-mysql",
            "createTime": "2021-08-25T15:26:47.085Z",
            "databaseVersion": "MYSQL_5_7",
            "etag": "5ef46e7ad0b6a4c1b201f1bce24a830234bde1e52309674b6efead5c5b7a541f",
            "gceZone": "us-central1-c",
            "instanceType": "CLOUD_SQL_INSTANCE",
            "ipAddresses": Array [
              Object {
                "ipAddress": "34.123.30.19",
                "type": "PRIMARY",
              },
            ],
            "kind": "sql#instance",
            "name": "test-mysql",
            "project": "j1-gc-integration-dev-v3",
            "region": "us-central1",
            "selfLink": "https://www.googleapis.com/sql/v1beta4/projects/j1-gc-integration-dev-v3/instances/test-mysql",
            "serverCaCert": Object {
              "cert": "-----BEGIN CERTIFICATE-----
MIIDfzCCAmegAwIBAgIBADANBgkqhkiG9w0BAQsFADB3MS0wKwYDVQQuEyQyYzMz
OTY1NS04YTk1LTQwYTMtODE0My01MDViNzAzODk3N2QxIzAhBgNVBAMTGkdvb2ds
ZSBDbG91ZCBTUUwgU2VydmVyIENBMRQwEgYDVQQKEwtHb29nbGUsIEluYzELMAkG
A1UEBhMCVVMwHhcNMjEwODI1MTUyNjQ4WhcNMzEwODIzMTUyNzQ4WjB3MS0wKwYD
VQQuEyQyYzMzOTY1NS04YTk1LTQwYTMtODE0My01MDViNzAzODk3N2QxIzAhBgNV
BAMTGkdvb2dsZSBDbG91ZCBTUUwgU2VydmVyIENBMRQwEgYDVQQKEwtHb29nbGUs
IEluYzELMAkGA1UEBhMCVVMwggEiMA0GCSqGSIb3DQEBAQUAA4IBDwAwggEKAoIB
AQC8KTcqUik8eu734RNrh0dB3MNwXE3Z8b93yjT3JosPE7wKcOeI+LSFlVxy873E
7ujGZ/nQz0a2PzBnR9KN0GTX3bMDevPI79lbDNKNnSmNXhcmlLW974wbhZI5TJNW
lfZtHCEBP9jUy3gOiq3s3ANIb86EnCSbyYcB68foLulbKFcPsTkTwzWXV6gnpbHT
0oRmjdAUadazxLKux9zSxEC05ZmmNRXJB2pHKNMGNExEpZVKhZfNwrhFh9js9lNc
23T+qMQT8RntYlqMIYqU4TxukjKI8HxEee6RAdvVN2HTwPk9WRBYCWf2xGAwDc+T
i13z/0XRDzp6qhGGYslrPW7VAgMBAAGjFjAUMBIGA1UdEwEB/wQIMAYBAf8CAQAw
DQYJKoZIhvcNAQELBQADggEBAJX+16R6kxQFMWPFSdxsR6Qp6acJFyxdCHqdzp3u
kYNQyOU/aBfZdcOl6RkNKzLq39uYKkgbwz0jgLAqqFYADiB15cRAFgYWSHBod/OG
PyX5jnFTggg99SOxSUpdt/rK+ZAZTr5jtdcJtqZX5CdtOeTnN3kpDZTsKrXOji9s
oGRgYJeguX0PHFMCgU84THWN/3BuQX1Yj/cOq7urEzOVzZTvAhl5SATbDitBiNyj
tsVDvHtzWvU99eSnmwIAKnjQcILAnCRl5l09g16nE1jFOKzPBHXPImvdEBs29uhr
Wmv3p1GfCl3WrFxNXmj6KFvQwZSzuDkrtB/XpXAcR2evFz4=
-----END CERTIFICATE-----",
              "certSerialNumber": "0",
              "commonName": "C=US,O=Google\\\\, Inc,CN=Google Cloud SQL Server CA,dnQualifier=2c339655-8a95-40a3-8143-505b7038977d",
              "createTime": "2021-08-25T15:26:48.451Z",
              "expirationTime": "2031-08-23T15:27:48.451Z",
              "instance": "test-mysql",
              "kind": "sql#sslCert",
              "sha1Fingerprint": "edc78759f1da058bff74246268bb8b580711a84d",
            },
            "serviceAccountEmailAddress": "p167984947943-rz0k29@gcp-sa-cloud-sql.iam.gserviceaccount.com",
            "settings": Object {
              "activationPolicy": "ALWAYS",
              "authorizedGaeApplications": Array [],
              "availabilityType": "ZONAL",
              "backupConfiguration": Object {
                "backupRetentionSettings": Object {
                  "retainedBackups": 7,
                  "retentionUnit": "COUNT",
                },
                "binaryLogEnabled": true,
                "enabled": true,
                "kind": "sql#backupConfiguration",
                "location": "us",
                "startTime": "13:00",
                "transactionLogRetentionDays": 7,
              },
              "dataDiskSizeGb": "100",
              "dataDiskType": "PD_SSD",
              "databaseFlags": Array [
                Object {
                  "name": "skip_show_database",
                  "value": "on",
                },
              ],
              "ipConfiguration": Object {
                "authorizedNetworks": Array [],
                "ipv4Enabled": true,
              },
              "kind": "sql#settings",
              "locationPreference": Object {
                "kind": "sql#locationPreference",
                "zone": "us-central1-c",
              },
              "maintenanceWindow": Object {
                "day": 0,
                "hour": 0,
                "kind": "sql#maintenanceWindow",
              },
              "pricingPlan": "PER_USE",
              "replicationType": "SYNCHRONOUS",
              "settingsVersion": "1",
              "storageAutoResize": true,
              "storageAutoResizeLimit": "0",
              "tier": "db-custom-4-26624",
            },
            "state": "RUNNABLE",
          },
        },
      ],
      "_type": "google_sql_mysql_instance",
      "authorizedNetworks": Array [],
      "automatedBackupsEnabled": true,
      "connectionName": "j1-gc-integration-dev-v3:us-central1:test-mysql",
      "createdOn": undefined,
      "displayName": "test-mysql",
      "encrypted": true,
      "hasPublicIP": true,
      "kmsKeyName": undefined,
      "localInfile": undefined,
      "location": "j1-gc-integration-dev-v3:us-central1:test-mysql",
      "name": "test-mysql",
      "requireSSL": undefined,
      "skipShowDatabase": true,
    },
    Object {
      "_class": Array [
        "Database",
      ],
      "_key": "https://www.googleapis.com/sql/v1beta4/projects/j1-gc-integration-dev-v3/instances/test-instance-id",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "backendType": "SECOND_GEN",
            "connectionName": "j1-gc-integration-dev-v3:us-central1:test-instance-id",
            "createTime": "2021-07-30T23:55:30.931Z",
            "databaseVersion": "POSTGRES_13",
            "etag": "453fafb6499c3b2c928fb0bd755cd387bbac359f9659afb5e0d14f8de363284e",
            "gceZone": "us-central1-f",
            "instanceType": "CLOUD_SQL_INSTANCE",
            "ipAddresses": Array [
              Object {
                "ipAddress": "34.133.152.231",
                "type": "PRIMARY",
              },
              Object {
                "ipAddress": "35.226.134.255",
                "type": "OUTGOING",
              },
            ],
            "kind": "sql#instance",
            "name": "test-instance-id",
            "project": "j1-gc-integration-dev-v3",
            "region": "us-central1",
            "selfLink": "https://www.googleapis.com/sql/v1beta4/projects/j1-gc-integration-dev-v3/instances/test-instance-id",
            "serverCaCert": Object {
              "cert": "-----BEGIN CERTIFICATE-----
MIIDfzCCAmegAwIBAgIBADANBgkqhkiG9w0BAQsFADB3MS0wKwYDVQQuEyQyMjA1
M2VkNy1kZmFhLTQxYzgtYmQ2NC1lNmVkN2IzZWU2YTIxIzAhBgNVBAMTGkdvb2ds
ZSBDbG91ZCBTUUwgU2VydmVyIENBMRQwEgYDVQQKEwtHb29nbGUsIEluYzELMAkG
A1UEBhMCVVMwHhcNMjEwNzMwMjM1NTQxWhcNMzEwNzI4MjM1NjQxWjB3MS0wKwYD
VQQuEyQyMjA1M2VkNy1kZmFhLTQxYzgtYmQ2NC1lNmVkN2IzZWU2YTIxIzAhBgNV
BAMTGkdvb2dsZSBDbG91ZCBTUUwgU2VydmVyIENBMRQwEgYDVQQKEwtHb29nbGUs
IEluYzELMAkGA1UEBhMCVVMwggEiMA0GCSqGSIb3DQEBAQUAA4IBDwAwggEKAoIB
AQCE4SCcQ3LDV1dqSkKMG56hDl6ZVNM9M2B8JHpQhjmOAD6wlqWMJIjO+wR2qX3j
2gvjhjTWXiR6O7an3KfdOduxHhKJsEH+uwMDKeHPKdE1ubEgh+VsH98zSZ6MLjSd
ikB+UsptXb2UeZNR9SVJqcC29ln2Xq7QsrIOXm0RZjJCv7PteDjR40vcywQ6DLNI
aiYyyXqPlTENiWoie+GIvjEc82qHSuFw9Gs22w5t4RmqP2Kq5zTQZqq4Kgc1Hf7n
XySvkprFAFU25NyLvIaH1Gfblimjiq+/u6E9wPN1k6UFpU70usYbSk105QCkGHPP
oY+HUGkEGJLKgQ9J33MBwW7dAgMBAAGjFjAUMBIGA1UdEwEB/wQIMAYBAf8CAQAw
DQYJKoZIhvcNAQELBQADggEBAAJTMPzTrAQclDmks45hTkZyrNZQwYrLq8CGEmBy
GIQmzddF2CFuE85tKzSYd988+0TtR7SL38dW4DorMeCDH6L3hWZqT7pUC62/6WhX
C8OrfYSntLNMmnsJdD6KYD8VPN16aciIwsq8i2jGnUstIaZu4RE8yW/kDYfAsgaq
8cOu714CFyynF2I2nAV4+DSx1+/nLgMGQ7je2HIvkIBQm8zStKPrv7i/NLylwSsD
bZU7+CUHK8VDzUp7F+sqRJ/iCPu7osXujBhEYaKU3q0+0x6Q+fYArrbxKvq4/R8m
BR0lYpAW/RluzCTNHmEwPY7HNzKtGtrj9TYkNQ7p0kyS6cI=
-----END CERTIFICATE-----",
              "certSerialNumber": "0",
              "commonName": "C=US,O=Google\\\\, Inc,CN=Google Cloud SQL Server CA,dnQualifier=22053ed7-dfaa-41c8-bd64-e6ed7b3ee6a2",
              "createTime": "2021-07-30T23:55:41.594Z",
              "expirationTime": "2031-07-28T23:56:41.594Z",
              "instance": "test-instance-id",
              "kind": "sql#sslCert",
              "sha1Fingerprint": "4adfff362237538328878763cb7700385f4947c1",
            },
            "serviceAccountEmailAddress": "p167984947943-mmes6i@gcp-sa-cloud-sql.iam.gserviceaccount.com",
            "settings": Object {
              "activationPolicy": "ALWAYS",
              "authorizedGaeApplications": Array [],
              "availabilityType": "ZONAL",
              "backupConfiguration": Object {
                "backupRetentionSettings": Object {
                  "retainedBackups": 7,
                  "retentionUnit": "COUNT",
                },
                "enabled": false,
                "kind": "sql#backupConfiguration",
                "pointInTimeRecoveryEnabled": false,
                "replicationLogArchivingEnabled": false,
                "startTime": "03:00",
                "transactionLogRetentionDays": 7,
              },
              "dataDiskSizeGb": "10",
              "dataDiskType": "PD_HDD",
              "databaseFlags": Array [
                Object {
                  "name": "log_duration",
                  "value": "on",
                },
                Object {
                  "name": "log_error_verbosity",
                  "value": "default",
                },
              ],
              "ipConfiguration": Object {
                "authorizedNetworks": Array [],
                "ipv4Enabled": true,
              },
              "kind": "sql#settings",
              "locationPreference": Object {
                "kind": "sql#locationPreference",
                "zone": "us-central1-f",
              },
              "maintenanceWindow": Object {
                "day": 0,
                "hour": 0,
                "kind": "sql#maintenanceWindow",
              },
              "pricingPlan": "PER_USE",
              "replicationType": "SYNCHRONOUS",
              "settingsVersion": "6",
              "storageAutoResize": false,
              "storageAutoResizeLimit": "0",
              "tier": "db-custom-1-3840",
            },
            "state": "RUNNABLE",
          },
        },
      ],
      "_type": "google_sql_postgres_instance",
      "authorizedNetworks": Array [],
      "automatedBackupsEnabled": false,
      "connectionName": "j1-gc-integration-dev-v3:us-central1:test-instance-id",
      "createdOn": undefined,
      "displayName": "test-instance-id",
      "encrypted": true,
      "hasPublicIP": true,
      "kmsKeyName": undefined,
      "location": "j1-gc-integration-dev-v3:us-central1:test-instance-id",
      "logCheckpoints": undefined,
      "logConnections": undefined,
      "logDisconnections": undefined,
      "logDuration": "on",
      "logErrorVerbosity": "default",
      "logLockWaits": undefined,
      "logMinDurationStatement": undefined,
      "logMinErrorStatement": undefined,
      "logTempFiles": undefined,
      "name": "test-instance-id",
      "requireSSL": undefined,
    },
  ],
  "collectedRelationships": Array [
    Object {
      "_class": "HAS",
      "_fromEntityKey": "projects/j1-gc-integration-dev-v3/locations/global/keyRings/example-topic-keyring",
      "_key": "projects/j1-gc-integration-dev-v3/locations/global/keyRings/example-topic-keyring|has|projects/j1-gc-integration-dev-v3/locations/global/keyRings/example-topic-keyring/cryptoKeys/example-key",
      "_toEntityKey": "projects/j1-gc-integration-dev-v3/locations/global/keyRings/example-topic-keyring/cryptoKeys/example-key",
      "_type": "google_kms_key_ring_has_crypto_key",
      "displayName": "HAS",
    },
    Object {
      "_class": "HAS",
      "_fromEntityKey": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/example-keyring",
      "_key": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/example-keyring|has|projects/j1-gc-integration-dev-v3/locations/us/keyRings/example-keyring/cryptoKeys/cmek_bigquery_crypto_key",
      "_toEntityKey": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/example-keyring/cryptoKeys/cmek_bigquery_crypto_key",
      "_type": "google_kms_key_ring_has_crypto_key",
      "displayName": "HAS",
    },
    Object {
      "_class": "HAS",
      "_fromEntityKey": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-bucket-ring",
      "_key": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-bucket-ring|has|projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-bucket-ring/cryptoKeys/j1-gc-integration-dev-v3-bucket-key",
      "_toEntityKey": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-bucket-ring/cryptoKeys/j1-gc-integration-dev-v3-bucket-key",
      "_type": "google_kms_key_ring_has_crypto_key",
      "displayName": "HAS",
    },
    Object {
      "_class": "HAS",
      "_fromEntityKey": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-disk-bucket-ring",
      "_key": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-disk-bucket-ring|has|projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-disk-bucket-ring/cryptoKeys/j1-gc-integration-dev-v3-disk-bucket-key",
      "_toEntityKey": "projects/j1-gc-integration-dev-v3/locations/us/keyRings/j1-gc-integration-dev-v3-disk-bucket-ring/cryptoKeys/j1-gc-integration-dev-v3-disk-bucket-key",
      "_type": "google_kms_key_ring_has_crypto_key",
      "displayName": "HAS",
    },
    Object {
      "_class": "HAS",
      "_fromEntityKey": "projects/j1-gc-integration-dev-v3/locations/us-central1/keyRings/j1-gc-integration-dev-v3-encrypted-sql-instance-ring",
      "_key": "projects/j1-gc-integration-dev-v3/locations/us-central1/keyRings/j1-gc-integration-dev-v3-encrypted-sql-instance-ring|has|projects/j1-gc-integration-dev-v3/locations/us-central1/keyRings/j1-gc-integration-dev-v3-encrypted-sql-instance-ring/cryptoKeys/j1-gc-integration-dev-v3-encrypted-sql-instance-key",
      "_toEntityKey": "projects/j1-gc-integration-dev-v3/locations/us-central1/keyRings/j1-gc-integration-dev-v3-encrypted-sql-instance-ring/cryptoKeys/j1-gc-integration-dev-v3-encrypted-sql-instance-key",
      "_type": "google_kms_key_ring_has_crypto_key",
      "displayName": "HAS",
    },
  ],
  "encounteredTypes": Array [
    "google_kms_key_ring",
    "google_kms_crypto_key",
    "google_kms_key_ring_has_crypto_key",
    "google_cloud_project",
    "google_sql_mysql_instance",
    "google_sql_postgres_instance",
  ],
  "numCollectedEntities": 13,
  "numCollectedRelationships": 5,
}
`;

exports[`#fetchSQLInstances should collect data 1`] = `
Object {
  "collectedEntities": Array [
    Object {
      "_class": Array [
        "Account",
      ],
      "_key": "projects/167984947943",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "createTime": "2021-05-31T15:15:56.125Z",
            "displayName": "j1-gc-integration-dev-v3",
            "etag": "CzUfI2XTWvMJgVGlic9LWA==",
            "name": "projects/167984947943",
            "parent": "folders/306329820365",
            "projectId": "j1-gc-integration-dev-v3",
            "state": "ACTIVE",
            "updateTime": "2021-05-31T15:15:58.148Z",
          },
        },
      ],
      "_type": "google_cloud_project",
      "createdOn": 1622474156125,
      "displayName": "j1-gc-integration-dev-v3",
      "id": "j1-gc-integration-dev-v3",
      "lifecycleState": "ACTIVE",
      "name": "projects/167984947943",
      "parent": "folders/306329820365",
      "projectId": "j1-gc-integration-dev-v3",
      "updatedOn": 1622474158148,
      "webLink": "https://console.cloud.google.com/home/dashboard?project=j1-gc-integration-dev-v3",
    },
    Object {
      "_class": Array [
        "Database",
      ],
      "_key": "https://www.googleapis.com/sql/v1beta4/projects/j1-gc-integration-dev-v3/instances/test-mysql",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "backendType": "SECOND_GEN",
            "connectionName": "j1-gc-integration-dev-v3:us-central1:test-mysql",
            "createTime": "2021-08-25T15:26:47.085Z",
            "databaseVersion": "MYSQL_5_7",
            "etag": "5ef46e7ad0b6a4c1b201f1bce24a830234bde1e52309674b6efead5c5b7a541f",
            "gceZone": "us-central1-c",
            "instanceType": "CLOUD_SQL_INSTANCE",
            "ipAddresses": Array [
              Object {
                "ipAddress": "34.123.30.19",
                "type": "PRIMARY",
              },
            ],
            "kind": "sql#instance",
            "name": "test-mysql",
            "project": "j1-gc-integration-dev-v3",
            "region": "us-central1",
            "selfLink": "https://www.googleapis.com/sql/v1beta4/projects/j1-gc-integration-dev-v3/instances/test-mysql",
            "serverCaCert": Object {
              "cert": "-----BEGIN CERTIFICATE-----
MIIDfzCCAmegAwIBAgIBADANBgkqhkiG9w0BAQsFADB3MS0wKwYDVQQuEyQyYzMz
OTY1NS04YTk1LTQwYTMtODE0My01MDViNzAzODk3N2QxIzAhBgNVBAMTGkdvb2ds
ZSBDbG91ZCBTUUwgU2VydmVyIENBMRQwEgYDVQQKEwtHb29nbGUsIEluYzELMAkG
A1UEBhMCVVMwHhcNMjEwODI1MTUyNjQ4WhcNMzEwODIzMTUyNzQ4WjB3MS0wKwYD
VQQuEyQyYzMzOTY1NS04YTk1LTQwYTMtODE0My01MDViNzAzODk3N2QxIzAhBgNV
BAMTGkdvb2dsZSBDbG91ZCBTUUwgU2VydmVyIENBMRQwEgYDVQQKEwtHb29nbGUs
IEluYzELMAkGA1UEBhMCVVMwggEiMA0GCSqGSIb3DQEBAQUAA4IBDwAwggEKAoIB
AQC8KTcqUik8eu734RNrh0dB3MNwXE3Z8b93yjT3JosPE7wKcOeI+LSFlVxy873E
7ujGZ/nQz0a2PzBnR9KN0GTX3bMDevPI79lbDNKNnSmNXhcmlLW974wbhZI5TJNW
lfZtHCEBP9jUy3gOiq3s3ANIb86EnCSbyYcB68foLulbKFcPsTkTwzWXV6gnpbHT
0oRmjdAUadazxLKux9zSxEC05ZmmNRXJB2pHKNMGNExEpZVKhZfNwrhFh9js9lNc
23T+qMQT8RntYlqMIYqU4TxukjKI8HxEee6RAdvVN2HTwPk9WRBYCWf2xGAwDc+T
i13z/0XRDzp6qhGGYslrPW7VAgMBAAGjFjAUMBIGA1UdEwEB/wQIMAYBAf8CAQAw
DQYJKoZIhvcNAQELBQADggEBAJX+16R6kxQFMWPFSdxsR6Qp6acJFyxdCHqdzp3u
kYNQyOU/aBfZdcOl6RkNKzLq39uYKkgbwz0jgLAqqFYADiB15cRAFgYWSHBod/OG
PyX5jnFTggg99SOxSUpdt/rK+ZAZTr5jtdcJtqZX5CdtOeTnN3kpDZTsKrXOji9s
oGRgYJeguX0PHFMCgU84THWN/3BuQX1Yj/cOq7urEzOVzZTvAhl5SATbDitBiNyj
tsVDvHtzWvU99eSnmwIAKnjQcILAnCRl5l09g16nE1jFOKzPBHXPImvdEBs29uhr
Wmv3p1GfCl3WrFxNXmj6KFvQwZSzuDkrtB/XpXAcR2evFz4=
-----END CERTIFICATE-----",
              "certSerialNumber": "0",
              "commonName": "C=US,O=Google\\\\, Inc,CN=Google Cloud SQL Server CA,dnQualifier=2c339655-8a95-40a3-8143-505b7038977d",
              "createTime": "2021-08-25T15:26:48.451Z",
              "expirationTime": "2031-08-23T15:27:48.451Z",
              "instance": "test-mysql",
              "kind": "sql#sslCert",
              "sha1Fingerprint": "edc78759f1da058bff74246268bb8b580711a84d",
            },
            "serviceAccountEmailAddress": "p167984947943-rz0k29@gcp-sa-cloud-sql.iam.gserviceaccount.com",
            "settings": Object {
              "activationPolicy": "ALWAYS",
              "authorizedGaeApplications": Array [],
              "availabilityType": "ZONAL",
              "backupConfiguration": Object {
                "backupRetentionSettings": Object {
                  "retainedBackups": 7,
                  "retentionUnit": "COUNT",
                },
                "binaryLogEnabled": true,
                "enabled": true,
                "kind": "sql#backupConfiguration",
                "location": "us",
                "startTime": "13:00",
                "transactionLogRetentionDays": 7,
              },
              "dataDiskSizeGb": "100",
              "dataDiskType": "PD_SSD",
              "databaseFlags": Array [
                Object {
                  "name": "skip_show_database",
                  "value": "on",
                },
              ],
              "ipConfiguration": Object {
                "authorizedNetworks": Array [],
                "ipv4Enabled": true,
              },
              "kind": "sql#settings",
              "locationPreference": Object {
                "kind": "sql#locationPreference",
                "zone": "us-central1-c",
              },
              "maintenanceWindow": Object {
                "day": 0,
                "hour": 0,
                "kind": "sql#maintenanceWindow",
              },
              "pricingPlan": "PER_USE",
              "replicationType": "SYNCHRONOUS",
              "settingsVersion": "1",
              "storageAutoResize": true,
              "storageAutoResizeLimit": "0",
              "tier": "db-custom-4-26624",
            },
            "state": "RUNNABLE",
          },
        },
      ],
      "_type": "google_sql_mysql_instance",
      "authorizedNetworks": Array [],
      "automatedBackupsEnabled": true,
      "connectionName": "j1-gc-integration-dev-v3:us-central1:test-mysql",
      "createdOn": undefined,
      "displayName": "test-mysql",
      "encrypted": true,
      "hasPublicIP": true,
      "kmsKeyName": undefined,
      "localInfile": undefined,
      "location": "j1-gc-integration-dev-v3:us-central1:test-mysql",
      "name": "test-mysql",
      "requireSSL": undefined,
      "skipShowDatabase": true,
    },
    Object {
      "_class": Array [
        "Database",
      ],
      "_key": "https://www.googleapis.com/sql/v1beta4/projects/j1-gc-integration-dev-v3/instances/test-instance-id",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "backendType": "SECOND_GEN",
            "connectionName": "j1-gc-integration-dev-v3:us-central1:test-instance-id",
            "createTime": "2021-07-30T23:55:30.931Z",
            "databaseVersion": "POSTGRES_13",
            "etag": "453fafb6499c3b2c928fb0bd755cd387bbac359f9659afb5e0d14f8de363284e",
            "gceZone": "us-central1-f",
            "instanceType": "CLOUD_SQL_INSTANCE",
            "ipAddresses": Array [
              Object {
                "ipAddress": "34.133.152.231",
                "type": "PRIMARY",
              },
              Object {
                "ipAddress": "35.226.134.255",
                "type": "OUTGOING",
              },
            ],
            "kind": "sql#instance",
            "name": "test-instance-id",
            "project": "j1-gc-integration-dev-v3",
            "region": "us-central1",
            "selfLink": "https://www.googleapis.com/sql/v1beta4/projects/j1-gc-integration-dev-v3/instances/test-instance-id",
            "serverCaCert": Object {
              "cert": "-----BEGIN CERTIFICATE-----
MIIDfzCCAmegAwIBAgIBADANBgkqhkiG9w0BAQsFADB3MS0wKwYDVQQuEyQyMjA1
M2VkNy1kZmFhLTQxYzgtYmQ2NC1lNmVkN2IzZWU2YTIxIzAhBgNVBAMTGkdvb2ds
ZSBDbG91ZCBTUUwgU2VydmVyIENBMRQwEgYDVQQKEwtHb29nbGUsIEluYzELMAkG
A1UEBhMCVVMwHhcNMjEwNzMwMjM1NTQxWhcNMzEwNzI4MjM1NjQxWjB3MS0wKwYD
VQQuEyQyMjA1M2VkNy1kZmFhLTQxYzgtYmQ2NC1lNmVkN2IzZWU2YTIxIzAhBgNV
BAMTGkdvb2dsZSBDbG91ZCBTUUwgU2VydmVyIENBMRQwEgYDVQQKEwtHb29nbGUs
IEluYzELMAkGA1UEBhMCVVMwggEiMA0GCSqGSIb3DQEBAQUAA4IBDwAwggEKAoIB
AQCE4SCcQ3LDV1dqSkKMG56hDl6ZVNM9M2B8JHpQhjmOAD6wlqWMJIjO+wR2qX3j
2gvjhjTWXiR6O7an3KfdOduxHhKJsEH+uwMDKeHPKdE1ubEgh+VsH98zSZ6MLjSd
ikB+UsptXb2UeZNR9SVJqcC29ln2Xq7QsrIOXm0RZjJCv7PteDjR40vcywQ6DLNI
aiYyyXqPlTENiWoie+GIvjEc82qHSuFw9Gs22w5t4RmqP2Kq5zTQZqq4Kgc1Hf7n
XySvkprFAFU25NyLvIaH1Gfblimjiq+/u6E9wPN1k6UFpU70usYbSk105QCkGHPP
oY+HUGkEGJLKgQ9J33MBwW7dAgMBAAGjFjAUMBIGA1UdEwEB/wQIMAYBAf8CAQAw
DQYJKoZIhvcNAQELBQADggEBAAJTMPzTrAQclDmks45hTkZyrNZQwYrLq8CGEmBy
GIQmzddF2CFuE85tKzSYd988+0TtR7SL38dW4DorMeCDH6L3hWZqT7pUC62/6WhX
C8OrfYSntLNMmnsJdD6KYD8VPN16aciIwsq8i2jGnUstIaZu4RE8yW/kDYfAsgaq
8cOu714CFyynF2I2nAV4+DSx1+/nLgMGQ7je2HIvkIBQm8zStKPrv7i/NLylwSsD
bZU7+CUHK8VDzUp7F+sqRJ/iCPu7osXujBhEYaKU3q0+0x6Q+fYArrbxKvq4/R8m
BR0lYpAW/RluzCTNHmEwPY7HNzKtGtrj9TYkNQ7p0kyS6cI=
-----END CERTIFICATE-----",
              "certSerialNumber": "0",
              "commonName": "C=US,O=Google\\\\, Inc,CN=Google Cloud SQL Server CA,dnQualifier=22053ed7-dfaa-41c8-bd64-e6ed7b3ee6a2",
              "createTime": "2021-07-30T23:55:41.594Z",
              "expirationTime": "2031-07-28T23:56:41.594Z",
              "instance": "test-instance-id",
              "kind": "sql#sslCert",
              "sha1Fingerprint": "4adfff362237538328878763cb7700385f4947c1",
            },
            "serviceAccountEmailAddress": "p167984947943-mmes6i@gcp-sa-cloud-sql.iam.gserviceaccount.com",
            "settings": Object {
              "activationPolicy": "ALWAYS",
              "authorizedGaeApplications": Array [],
              "availabilityType": "ZONAL",
              "backupConfiguration": Object {
                "backupRetentionSettings": Object {
                  "retainedBackups": 7,
                  "retentionUnit": "COUNT",
                },
                "enabled": false,
                "kind": "sql#backupConfiguration",
                "pointInTimeRecoveryEnabled": false,
                "replicationLogArchivingEnabled": false,
                "startTime": "03:00",
                "transactionLogRetentionDays": 7,
              },
              "dataDiskSizeGb": "10",
              "dataDiskType": "PD_HDD",
              "databaseFlags": Array [
                Object {
                  "name": "log_duration",
                  "value": "on",
                },
                Object {
                  "name": "log_error_verbosity",
                  "value": "default",
                },
              ],
              "ipConfiguration": Object {
                "authorizedNetworks": Array [],
                "ipv4Enabled": true,
              },
              "kind": "sql#settings",
              "locationPreference": Object {
                "kind": "sql#locationPreference",
                "zone": "us-central1-f",
              },
              "maintenanceWindow": Object {
                "day": 0,
                "hour": 0,
                "kind": "sql#maintenanceWindow",
              },
              "pricingPlan": "PER_USE",
              "replicationType": "SYNCHRONOUS",
              "settingsVersion": "6",
              "storageAutoResize": false,
              "storageAutoResizeLimit": "0",
              "tier": "db-custom-1-3840",
            },
            "state": "RUNNABLE",
          },
        },
      ],
      "_type": "google_sql_postgres_instance",
      "authorizedNetworks": Array [],
      "automatedBackupsEnabled": false,
      "connectionName": "j1-gc-integration-dev-v3:us-central1:test-instance-id",
      "createdOn": undefined,
      "displayName": "test-instance-id",
      "encrypted": true,
      "hasPublicIP": true,
      "kmsKeyName": undefined,
      "location": "j1-gc-integration-dev-v3:us-central1:test-instance-id",
      "logCheckpoints": undefined,
      "logConnections": undefined,
      "logDisconnections": undefined,
      "logDuration": "on",
      "logErrorVerbosity": "default",
      "logLockWaits": undefined,
      "logMinDurationStatement": undefined,
      "logMinErrorStatement": undefined,
      "logTempFiles": undefined,
      "name": "test-instance-id",
      "requireSSL": undefined,
    },
  ],
  "collectedRelationships": Array [],
  "encounteredTypes": Array [
    "google_cloud_project",
    "google_sql_mysql_instance",
    "google_sql_postgres_instance",
  ],
  "numCollectedEntities": 3,
  "numCollectedRelationships": 0,
}
`;
